--- a/package.json
+++ b/package.json
@@ -5,25 +5,27 @@
   "author": "mlefree",
   "homepage": "https://miapp.github.io/cleanator",
   "main": "www/index.html",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "bower": "*",
     "es5-shim": "^4.4.1",
+    "gulp": "^3.9.0",
+    "gulp-angular-gettext": "^2.2.0",
     "gulp-cheerio": "^0.6.2",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-preprocess": "^2.0.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
-    "gulp": "^3.9.0",
-    "gulp-angular-gettext": "^2.2.0",
     "gulp-util": "^2.2.20",
-    "karma": "*",
+    "jasmine-core": "^2.4.1",
+    "karma": "^1.1.1",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.1.0",
     "karma-html-reporter": "*",
-    "karma-jasmine": "*",
+    "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter-livereload": "*",
-    "karma-phantomjs-launcher": "*",
+    "karma-phantomjs-launcher": "^1.0.1",
     "phantomjs": "*"
   },
   "cordovaPlugins": [
