--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 services:
 - mongodb
+addons:
+  code_climate:
+    repo_token: 2cd26ede3ca1d6
 language: node_js
 script: npm test
+after_script:
+- codeclimate-test-reporter < ./build/coverage/report-lcov/lcov.info
 after_success:
 node_js:
 - 6.1.0
