--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {},
   "devDependencies": {
     "bower": "*",
+    "codeclimate-test-reporter": "*",
     "es5-shim": "^4.4.1",
     "eslint": "^3.1.1",
     "eslint-config-angular": "^0.5.0",
