--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
     "gulp-util": "^2.2.20",
+    "http-server": "^0.9.0",
     "jasmine-core": "^2.4.1",
     "karma": "^1.1.1",
     "karma-chrome-launcher": "^1.0.1",
@@ -48,6 +49,7 @@
     "install:bower": "./node_modules/.bin/bower install",
     "test": "./node_modules/.bin/karma start tests/unit-tests.conf.js",
     "test:watch": "./node_modules/.bin/karma start tests/unit-tests.conf.js --no-single-run  --no-auto-watch --reporters progress --browsers PhantomJS",
-    "start": "ionic serve"
+    "start:ionic": "ionic serve",
+    "start": "./node_modules/.bin/http-server ./www/"
   }
 }
