--- a/bower.json
+++ b/bower.json
@@ -3,17 +3,17 @@
   "private": "false",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.1.1",
-    "angular-mocks": "~1.4.3",
     "crypto-js": "^3.1.6"
   },
   "dependencies": {
-    "angular-gettext": "latest",
+    "angular-gettext": "*",
     "pouchdb": "~5.1.0",
     "angular-filter": "~0.5.8",
     "chance": "~0.8.0",
     "ionic-material": "~0.4.2",
     "Chart.js": "~1.0.2",
     "ng-chartjs": "~0.0.5",
-    "angular-chart.js": "~0.8.8"
+    "angular-chart.js": "~0.8.8",
+    "miappio-sdk": "*"
   }
 }
