--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "16.09.03",
   "description": "cleanator",
   "author": "mlefree",
-  "homepage": "https://miapp.github.io/cleanator",  
+  "homepage": "https://miapp.github.io/cleanator",
   "main": "www/index.html",
   "dependencies": {
     "http-server": "^0.9.0"
   },
   "devDependencies": {
+    "angular": "^1.5.8",
+    "angular-mock": "^1.0.0",
+    "angular-mocks": "^1.5.8",
     "bower": "*",
     "codeclimate-test-reporter": "*",
     "es5-shim": "^4.4.1",
