--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "Chart.js": "~1.0.2",
     "ng-chartjs": "~0.0.5",
     "angular-chart.js": "~0.8.8",
-    "miappio-sdk": "*"
+    "miappio-sdk": "*",
+    "angular-mocks": "1.4.3"
   }
 }
