--- a/package.json
+++ b/package.json
@@ -6,19 +6,12 @@
   "homepage": "https://miapp.github.io/cleanator",
   "main": "www/index.html",
   "dependencies": {
+    "gulp-bump": "^2.4.0",
     "http-server": "^0.9.0"
   },
   "devDependencies": {
-    "angular": "^1.5.8",
-    "angular-mock": "^1.0.0",
-    "angular-mocks": "^1.5.8",
     "bower": "*",
     "codeclimate-test-reporter": "*",
-    "es5-shim": "^4.4.1",
-    "eslint": "^3.1.1",
-    "eslint-config-angular": "^0.5.0",
-    "eslint-plugin-angular": "^1.3.0",
-    "eslint-plugin-jasmine": "^1.8.1",
     "gulp": "^3.9.0",
     "gulp-angular-gettext": "^2.2.0",
     "gulp-cheerio": "^0.6.2",
@@ -36,6 +29,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter-livereload": "*",
     "karma-phantomjs-launcher": "^1.0.1",
+    "miappio-sdk": "*",
     "phantomjs": "*"
   },
   "cordovaPlugins": [
@@ -51,9 +45,9 @@
   ],
   "scripts": {
     "install:bower": "./node_modules/.bin/bower install",
-    "test": "./node_modules/.bin/karma start tests/unit-tests.conf.js",
-    "test:watch": "./node_modules/.bin/karma start tests/unit-tests.conf.js --no-single-run  --no-auto-watch --reporters progress --browsers PhantomJS",
+    "test": "./node_modules/.bin/karma start tests/karma.unit-tests.conf.js",
+    "test:watch": "./node_modules/.bin/karma start tests/karma.unit-tests.conf.js --no-single-run  --no-auto-watch --reporters progress --browsers PhantomJS",
     "start:ionic": "ionic serve",
-    "start": "./node_modules/.bin/http-server -a 0.0.0.0 -p 3456 ./www/"
+    "start": "./node_modules/.bin/http-server -a 0.0.0.0 -p 8080 ./www/"
   }
 }
