--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   ],
   "scripts": {
     "install:bower": "./node_modules/.bin/bower install",
-    "test": "./node_modules/.bin/karma start tests/karma.unit-tests.conf.js",
+    "test": "./node_modules/.bin/karma start tests/karma.unit-tests.conf.js --reporters coverage",
     "test:watch": "./node_modules/.bin/karma start tests/karma.unit-tests.conf.js --no-single-run  --no-auto-watch --reporters progress --browsers PhantomJS",
     "start:ionic": "ionic serve",
     "start": "./node_modules/.bin/http-server -a 0.0.0.0 -p 8080 ./www/"
