--- a/www/lib/angular-gettext/package.json
+++ b/www/lib/angular-gettext/package.json
@@ -1,9 +1,9 @@
 {
   "name": "angular-gettext",
-  "version": "2.3.7",
+  "version": "2.3.8",
   "title": "Angular Gettext",
   "description": "Gettext support for Angular.js",
-  "main": "dist/angular-gettext.js",
+  "main": "index.js",
   "directories": {
     "test": "test"
   },
