--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   "dependencies": {
     "gulp-bump": "^2.4.0",
     "http-server": "^0.9.0",
-    "webcrypto-jwt": "^0.2.1"
-  },
-  "devDependencies": {
+    "webcrypto-jwt": "^0.2.1",
     "bower": "*",
     "codeclimate-test-reporter": "*",
     "gulp": "^3.9.0",
@@ -46,7 +44,8 @@
   "scripts": {
     "install:bower": "./node_modules/.bin/bower install",
     "gulp:default": "./node_modules/.bin/gulp",
-    "test": "./node_modules/.bin/karma start tests/karma.unit-tests.conf.js --reporters coverage",
+    "test": "./node_modules/.bin/karma start tests/karma.unit-tests.conf.js",
+    "test:old": "./node_modules/.bin/karma start tests/karma.unit-tests.conf.js --reporters coverage",
     "test:watch": "./node_modules/.bin/karma start tests/karma.unit-tests.conf.js --no-single-run  --no-auto-watch --reporters progress --browsers PhantomJS",
     "start:ionic": "ionic serve",
     "start": "./node_modules/.bin/http-server -a 0.0.0.0 -p 8080 ./www/"
