connection ok : need disconnect on token remove

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
-  "name": "_?",
-  "app_id": "_?",
+  "name": "cleanator",
+  "app_id": "cleanator",
   "gulpStartupTasks": [
     "default"
   ],
