--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "cleanator",
-  "version": "16.09.03",
+  "version": "17.01.02",
   "description": "cleanator",
   "author": "mlefree",
   "homepage": "https://miapp.github.io/cleanator",
   "main": "www/index.html",
   "dependencies": {
-    "gulp-bump": "^2.4.0",
-    "http-server": "^0.9.0",
-    "webcrypto-jwt": "^0.2.1",
     "bower": "*",
     "codeclimate-test-reporter": "*",
     "gulp": "^3.9.0",
     "gulp-angular-gettext": "^2.2.0",
+    "gulp-bump": "^2.4.0",
     "gulp-cheerio": "^0.6.2",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
@@ -20,6 +18,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
     "gulp-util": "^2.2.20",
+    "http-server": "^0.9.0",
     "jasmine-core": "^2.4.1",
     "karma": "^1.1.1",
     "karma-chrome-launcher": "^1.0.1",
@@ -28,7 +27,9 @@
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter-livereload": "*",
     "karma-phantomjs-launcher": "^1.0.1",
-    "phantomjs": "*"
+    "phantomjs": "*",
+    "shelljs": "^0.7.5",
+    "webcrypto-jwt": "^0.2.1"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
