--- a/www/lib/angular-filter/bower.json
+++ b/www/lib/angular-filter/bower.json
@@ -2,13 +2,14 @@
   "name": "angular-filter",
   "main": "dist/angular-filter.js",
   "description": "Bunch of useful filters for angularJS(with no external dependencies!)",
+  "version": "0.5.12",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/a8m/angular-filter.git"
   },
   "dependencies": {
-    "angular": "*"
+    "angular": ">=1.4.3"
   },
   "devDependencies": {
     "angular-mocks": "1.4.3"
