--- a/www/lib/miappio-sdk/package.json
+++ b/www/lib/miappio-sdk/package.json
@@ -1,11 +1,12 @@
 {
   "name": "miappio-sdk",
-  "version": "1.0.45",
+  "version": "1.0.57",
   "description": "miapp.io client SDK",
   "scripts": {
     "test": "./node_modules/.bin/grunt build;./node_modules/.bin/tsc;./node_modules/.bin/grunt dist; ./node_modules/.bin/karma start test/karma.dist-tests.conf.js",
     "bump": "./node_modules/.bin/grunt bump",
     "tsc": "./node_modules/.bin/grunt build; ./node_modules/.bin/tsc --traceResolution",
+    "docs": "./node_modules/.bin/grunt jsdoc",
     "postpublish": "",
     "test-mocha": "./node_modules/.bin/mocha -R dot ./test/test-*.js",
     "test-karma": "./node_modules/.bin/karma start test/karma.unit-tests.conf.js",
@@ -41,13 +42,16 @@
     "grunt-contrib-concat": "*",
     "grunt-contrib-copy": "*",
     "grunt-contrib-uglify": "*",
+    "grunt-jsdoc": "^2.1.0",
     "grunt-typescript-project": "*",
+    "ink-docstrap": "^1.3.0",
     "jasmine-core": "*",
     "karma": "*",
     "karma-chrome-launcher": "*",
     "karma-coverage": "*",
     "karma-html-reporter": "*",
     "karma-jasmine": "*",
+    "karma-jasmine-ajax": "^0.1.13",
     "karma-jasmine-html-reporter-livereload": "*",
     "karma-phantomjs-launcher": "*",
     "typescript": "^2.0.8"
