--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cleanator",
-  "version": "17.1.5",
+  "version": "17.1.9",
   "description": "cleanator",
   "author": "mlefree",
   "homepage": "https://miapp.github.io/cleanator",
@@ -49,7 +49,7 @@
     "test:watch": "./node_modules/.bin/karma start tests/karma.unit-tests.conf.js --no-single-run  --no-auto-watch --reporters progress --browsers PhantomJS",
     "start": "./node_modules/.bin/http-server -a 0.0.0.0 -p 8080 ./www/",
     "dev:serve_notused": "ionic serve",
-    "dev:build": "ionic build android",
+    "dev:build": "npm version patch; ./node_modules/.bin/gulp; ionic build android",
     "dev:run": "ionic run android --device"
   }
 }
