--- a/ionic.config.json
+++ b/ionic.config.json
@@ -10,5 +10,9 @@
     "scss/**/*.scss",
     "package.json",
     ".config.js"
-  ]
+  ],
+  "integrations": {
+    "cordova": {}
+  },
+  "type": "ionic1"
 }
