--- a/package.json
+++ b/package.json
@@ -1,67 +1,90 @@
 {
-  "name": "cleanator",
-  "version": "17.9.04",
-  "id": "io.miapp.cleanator",
-  "description": "smart couple organizer",
-  "author": "mlefree",
-  "homepage": "https://miapp.github.io/cleanator",
-  "main": "www/index.html",
-  "dependencies": {
-    "bower": "*",
-    "cordova-plugin-google-analytics": "^1.8.3",
-    "express": "^4.15.4",
-    "gulp": "^3.9.0",
-    "gulp-angular-gettext": "^2.2.0",
-    "gulp-bump": "^2.4.0",
-    "gulp-cheerio": "^0.6.2",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-preprocess": "^2.0.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^2.0.4",
-    "gulp-util": "^2.2.20",
-    "http-server": "^0.9.0",
-    "jasmine-ajax": "^3.3.1",
-    "jasmine-core": "^2.4.1",
-    "karma": "^1.1.1",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-coverage": "^1.1.0",
-    "karma-html-reporter": "*",
-    "karma-jasmine": "^1.0.2",
-    "karma-jasmine-ajax": "^0.1.13",
-    "karma-jasmine-html-reporter-livereload": "*",
-    "karma-phantomjs-launcher": "^1.0.1",
-    "phantomjs": "*",
-    "shelljs": "^0.7.5"
-  },
-  "devDependencies": {},
-  "cordovaPlugins": [
-    "cordova-plugin-device",
-    "cordova-plugin-console",
-    "cordova-plugin-whitelist",
-    "cordova-plugin-splashscreen",
-    "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard"
-  ],
-  "cordovaPlatforms": [
-    "android",
-    "ios",
-    {
-      "platform": "ios",
-      "version": "",
-      "locator": "ios"
+    "name": "cleanator",
+    "version": "17.9.04",
+    "id": "io.miapp.cleanator",
+    "description": "smart couple organizer",
+    "author": "mlefree",
+    "homepage": "https://miapp.github.io/cleanator",
+    "main": "www/index.html",
+    "dependencies": {
+        "bower": "*",
+        "cordova-plugin-google-analytics": "^1.8.3",
+        "express": "^4.15.4",
+        "gulp": "^3.9.0",
+        "gulp-angular-gettext": "^2.2.0",
+        "gulp-bump": "^2.4.0",
+        "gulp-cheerio": "^0.6.2",
+        "gulp-concat": "^2.2.0",
+        "gulp-minify-css": "^0.3.0",
+        "gulp-preprocess": "^2.0.0",
+        "gulp-rename": "^1.2.0",
+        "gulp-sass": "^2.0.4",
+        "gulp-util": "^2.2.20",
+        "http-server": "^0.9.0",
+        "jasmine-ajax": "^3.3.1",
+        "jasmine-core": "^2.4.1",
+        "karma": "^1.1.1",
+        "karma-chrome-launcher": "^1.0.1",
+        "karma-coverage": "^1.1.0",
+        "karma-html-reporter": "*",
+        "karma-jasmine": "^1.0.2",
+        "karma-jasmine-ajax": "^0.1.13",
+        "karma-jasmine-html-reporter-livereload": "*",
+        "karma-phantomjs-launcher": "^1.0.1",
+        "phantomjs": "*",
+        "shelljs": "^0.7.5",
+        "cordova-ios": "~4.2.1",
+        "cordova-android": "~6.1.2",
+        "cordova-plugin-console": "~1.0.5",
+        "cordova-plugin-device": "~1.1.4",
+        "cordova-plugin-network-information": "~1.3.1",
+        "cordova-plugin-splashscreen": "~4.0.1",
+        "cordova-plugin-whitelist": "~1.3.1",
+        "ionic-plugin-keyboard": "~2.2.1"
+    },
+    "devDependencies": {},
+    "cordovaPlugins": [
+        "cordova-plugin-device",
+        "cordova-plugin-console",
+        "cordova-plugin-whitelist",
+        "cordova-plugin-splashscreen",
+        "cordova-plugin-statusbar",
+        "ionic-plugin-keyboard"
+    ],
+    "cordovaPlatforms": [
+        "android",
+        "ios",
+        {
+            "platform": "ios",
+            "version": "",
+            "locator": "ios"
+        }
+    ],
+    "scripts": {
+        "bower:install": "./node_modules/.bin/bower install",
+        "build:prod": "./node_modules/.bin/gulp default",
+        "build:device-demo": "./node_modules/.bin/gulp config-demo-xml",
+        "build:add-demo": "./node_modules/.bin/gulp config-as-demo-js",
+        "build:demo": "npm run build:prod && npm run build:add-demo && npm run build:device-demo",
+        "test": "npm run build:demo && node_modules/.bin/karma start tests/karma.unit-tests.conf.js",
+        "start": "npm run build:demo && node web.js",
+        "android": "npm run build:prod && ionic platform add android && ionic build android && ionic run android --device",
+        "android:demo": "npm run build:demo && ionic platform add android && ionic build android && ionic run android --device",
+        "ios": "npm run build:prod && ionic platform add ios && ionic build ios",
+        "ios:demo": "npm run build:demo && ionic platform add ios && ionic build ios"
+    },
+    "cordova": {
+        "platforms": [
+            "android",
+            "ios"
+        ],
+        "plugins": {
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-network-information": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-whitelist": {},
+            "ionic-plugin-keyboard": {}
+        }
     }
-  ],
-  "scripts": {
-    "bower:install": "./node_modules/.bin/bower install",
-    "build:prod": "./node_modules/.bin/gulp default",
-    "build:device-demo": "./node_modules/.bin/gulp config-demo-xml",
-    "build:add-demo": "./node_modules/.bin/gulp config-as-demo-js",
-    "build:demo": "npm run build:prod && npm run build:add-demo && npm run build:device-demo",
-    "test": "npm run build:demo && node_modules/.bin/karma start tests/karma.unit-tests.conf.js",
-    "start": "npm run build:demo && node web.js",
-    "android": "npm run build:prod && ionic platform add android && ionic build android && ionic run android --device",
-    "android:demo": "npm run build:demo && ionic platform add android && ionic build android && ionic run android --device",
-    "ios": "npm run build:prod && ionic platform add ios && ionic build ios"
-  }
 }
