--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
     "author": "mlefree",
     "homepage": "https://miapp.github.io/cleanator",
     "main": "www/index.html",
-    "dependencies": {
+    "devDependencies": {
         "bower": "*",
+        "cordova-android": "~6.1.2",
+        "cordova-ios": "~4.2.1",
+        "cordova-plugin-console": "~1.0.5",
+        "cordova-plugin-device": "^1.1.7",
         "cordova-plugin-google-analytics": "^1.8.3",
-        "express": "^4.15.4",
+        "cordova-plugin-network-information": "^1.3.4",
+        "cordova-plugin-splashscreen": "~4.0.1",
+        "cordova-plugin-whitelist": "^1.3.3",
+        "express": "^4.16.2",
         "gulp": "^3.9.0",
         "gulp-angular-gettext": "^2.2.0",
-        "gulp-bump": "^2.4.0",
-        "gulp-cheerio": "^0.6.2",
+        "gulp-bump": "^2.9.0",
+        "gulp-cheerio": "^0.6.3",
         "gulp-concat": "^2.2.0",
         "gulp-minify-css": "^0.3.0",
         "gulp-preprocess": "^2.0.0",
@@ -21,28 +28,20 @@
         "gulp-sass": "^2.0.4",
         "gulp-util": "^2.2.20",
         "http-server": "^0.9.0",
+        "ionic-plugin-keyboard": "~2.2.1",
         "jasmine-ajax": "^3.3.1",
         "jasmine-core": "^2.4.1",
         "karma": "^1.1.1",
         "karma-chrome-launcher": "^1.0.1",
         "karma-coverage": "^1.1.0",
         "karma-html-reporter": "*",
-        "karma-jasmine": "^1.0.2",
+        "karma-jasmine": "^1.1.1",
         "karma-jasmine-ajax": "^0.1.13",
         "karma-jasmine-html-reporter-livereload": "*",
         "karma-phantomjs-launcher": "^1.0.1",
         "phantomjs": "*",
-        "shelljs": "^0.7.5",
-        "cordova-ios": "~4.2.1",
-        "cordova-android": "~6.1.2",
-        "cordova-plugin-console": "~1.0.5",
-        "cordova-plugin-device": "~1.1.4",
-        "cordova-plugin-network-information": "~1.3.1",
-        "cordova-plugin-splashscreen": "~4.0.1",
-        "cordova-plugin-whitelist": "~1.3.1",
-        "ionic-plugin-keyboard": "~2.2.1"
+        "shelljs": "^0.7.5"
     },
-    "devDependencies": {},
     "cordovaPlugins": [
         "cordova-plugin-device",
         "cordova-plugin-console",
